<resources>
    <string name="app_name">Marcha Project</string>
    <string name="button_sign_up">Entrar</string>
    <string name="button_register">Registre-se</string>
    <string name="hint_email">Digite seu email</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="login_error">Email e/ou senha inválidos</string>
    <string name="button_sign_out">Sair</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="register_error">Insira corretamente os dados</string>
    <string name="hint_name">Digite seu nome</string>
    <string name="hint_height">Digite sua altura em centímetros</string>
    <string name="hint_weight">digite seu peso em quilos</string>
    <string name="button_save_datas">Salvar dados</string>
    <string name="button_create_count">Criar conta</string>
    <string name="sensor_error">Sensor de passos não disponível!</string>
    <string name="button_start">Iniciar</string>
    <string name="button_stop">Parar</string>
    <string name="congratulations">Parabéns!</string>
    <string name="congratulations_2">Você concluiu sua trilha!</string>
    <string name="button_save">Salvar</string>
    <string name="button_discard">Descartar</string>
    <string name="hint_name_trail">Dê um nome a essa trilha</string>
    <string name="button_trails">Trilhas</string>
    <string name="button_back">Voltar</string>

</resources>