<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/pixel_montain">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_email"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:textColorHint="#DDDDDD"
        android:textColor="#FFFFFF"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="35dp"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_senha"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:textColorHint="#DDDDDD"
        android:textColor="#FFFFFF"
        android:inputType="textPassword"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/editText_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_background"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/button_register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="64dp"
        android:layout_marginBottom="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
