<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/pixel_montain">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_name"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:textColorHint="#DDDDDD"
        android:textColor="#FFFFFF"
        android:inputType="text"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_height"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/editText_height"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_height"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:textColorHint="#DDDDDD"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_weight"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="16dp"
        android:textColorHint="#DDDDDD"
        android:textColor="#FFFFFF"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_height"
        android:inputType="numberDecimal"
        android:layout_marginTop="15dp"/>

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_weight"
        app:layout_constraintBottom_toTopOf="@id/button_register">

        <RadioButton
            android:id="@+id/radioMasculine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioFeminine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/button_save_datas"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_background"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>